--- a/README.adoc
+++ b/README.adoc
@@ -55,12 +55,12 @@ This branch is protected.
 . If you are contributing to a previous release, create your pull request against the respective _maintenance/<RELEASENUMBER>_ branch.
 These branches are also protected.
 
-. Make sure all validation (Travis CI) checks are passed.
+. Make sure all validation (GitHub Actions) checks are passed.
 
 . For your pull request to be reviewed, tag relevant SMEs from the development team (if applicable) and a member of the SLE-HPC doc team: Tahlia Richardson (@tahliar).
 +
 NOTE: If your pull request has multiple files and reorganisation changes, please build locally using DAPS or daps2docker (see instructions below) to verify and build the files.
-Travis CI only validates, and does not ensure the XML builds are correct.
+GitHub Actions only validates, and does not ensure the XML builds are correct.
 
 . Implement any required changes, or fix any merge conflicts if relevant.
 If you have any questions, ping a documentation team member in #team-suse-docs on Slack.
